--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./main.tsx"></script>
+    <div>3242</div>
+    <script type="module" src="@/pages/main.tsx"></script>
   </body>
 </html>
