--- a/src/pages/Products/index.html
+++ b/src/pages/Products/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CRYSTAL - ABOUT</title>
+    <title>CRYSTAL - PRODUCTS</title>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-JL1M2W85NF"></script>
     <script>
@@ -17,6 +17,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/pages/About/main.tsx"></script>
+    <script type="module" src="/src/pages/Products/main.tsx"></script>
   </body>
 </html>
