--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -1,11 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-
+    <title>CRYSTAL - HOME</title>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-JL1M2W85NF"></script>
     <script>
@@ -15,10 +14,9 @@
 
       gtag('config', 'G-JL1M2W85NF');
     </script>
-
   </head>
   <body>
     <div id="root"></div>
-    <!-- <script type="module" src="src/main.tsx"></script> -->
+    <script type="module" src="/src/pages/index/main.tsx"></script>
   </body>
 </html>
